Merge ResultChecker/Printer